🎨 drop extra globalThis and allow cmd+' to close preview while focused

--- a/package.json
+++ b/package.json
@@ -221,8 +221,7 @@
       {
         "key": "Ctrl+'",
         "mac": "Cmd+'",
-        "command": "dbtPowerUser.showCompileWindow",
-        "when": "resourceLangId == jinja-sql"
+        "command": "dbtPowerUser.showCompileWindow"
       }
     ],
     "menus": {
