--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
             "description": "The maximum number of rows the `Preview SQL Query` command returns.",
             "default": 500
           },
+          "dbt.queryTemplate": {
+            "type": "string",
+            "description": "Override the default query template that is used by the `Preview SQL Query` command. Use this if your database has special syntax to limit query results",
+            "default": "select * from ({query}) limit {limit}"
+          },
           "dbt.previewPanel.displayLocation": {
             "type": "string",
             "enum": [
