--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,7 @@ on:
   
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -23,10 +20,7 @@ jobs:
       with:
         node-version: '16'
     - run: npm install
-    - name: Run tests
-      uses: GabrielBB/xvfb-action@v1.2
-      with:
-        run: npm test
+    - run: npx lint-staged --diff="--diff-filter=d --name-only origin/${GITHUB_BASE_REF} ${GITHUB_HEAD_REF}"
     - name: Publish Visual Studio Marketplace
       if: success() && startsWith( github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
       run: npm run deploy-vscode
