--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,8 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es6",
-		"outDir": "out",
-		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true,
-		"forceConsistentCasingInFileNames": true,
-		"importHelpers": true,
-		"types": ["reflect-metadata", "node"],
-		"lib": [
-			"es6",
-			"es2020",
-			"dom"
-		],
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	},
+	"extends": "./tsconfig.base.json",
 	"exclude": [
+		".vscode-test",
 		"node_modules",
-		".vscode-test"
+		"webviews"
 	]
 }
