Scaffolding react webview for query results

--- a/package.json
+++ b/package.json
@@ -329,16 +329,22 @@
   "devDependencies": {
     "@types/glob": "^7.1.1",
     "@types/mocha": "^7.0.2",
+    "@types/mui-datatables": "^3.7.9",
     "@types/node": "^13.13.52",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^18.0.6",
     "@types/vscode": "^1.52.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "@vscode/test-electron": "^1.3.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.7.0",
     "file-loader": "^6.1.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
     "ovsx": "^0.3.0",
+    "style-loader": "^3.3.1",
+    "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.7.4",
@@ -351,12 +357,20 @@
     "ms-python.python"
   ],
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.8",
     "@vscode/webview-ui-toolkit": "^1.1.0",
     "dayjs": "^1.8.34",
     "inversify": "^5.0.5",
     "inversify-binding-decorators": "^4.0.0",
+    "mui-datatables": "^4.2.2",
     "node-abort-controller": "^3.0.1",
     "node-fetch": "^3.2.10",
+    "path-browserify": "^1.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "yaml": "^2.0.0-10"
   }
