♻️ large refactor of webview code + misc related improvements

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,14 +17,12 @@
 		],
 		"sourceMap": true,
 		"rootDirs": [
-			"src",
-			"webviews"
+			"src"
 		],
 		"strict": true,
 	},
 	"include": [
-		"src",
-		"webviews"
+		"src"
 	],
 	"exclude": [
 		"node_modules"
