--- a/package.json
+++ b/package.json
@@ -55,6 +55,11 @@
             "type": "string",
             "description": "Override the profiles dir for every dbt command. Absolute path or relative to the profiles.yml"
           },
+          "dbt.osmosisCheck": {
+            "type": "boolean",
+            "description": "Enable dbt-osmosis installation prompt.",
+            "default": true
+          },
           "dbt.queryPreview.queryLimit": {
             "type": "integer",
             "description": "The maximum number of rows the `Preview SQL Query` command returns.",
