🚧 more lint fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,6 @@
         "eqeqeq": "warn",
         "no-throw-literal": "warn",
         "semi": "off",
-        "indent": [ "error", 2 ]
+        "indent": [ "error", 2, { "SwitchCase": 1 } ]
     }
 }
