Added snippets (for vsix)

--- a/package.json
+++ b/package.json
@@ -30,7 +30,20 @@
   ],
   "main": "./dist/extension",
   "contributes": {
-    "configuration": [
+    "snippets": [
+      {
+          "language": "jinja-sql",
+          "path": "./snippets/snippets_sql.json"
+      },
+      {
+          "language": "jinja-yaml",
+          "path": "./snippets/snippets_yaml.json"
+      },
+      {
+          "language": "jinja-md",
+          "path": "./snippets/snippets_markdown.json"
+      }
+    ], "configuration": [
       {
         "title": "dbt Power User",
         "properties": {
