--- a/package.json
+++ b/package.json
@@ -208,7 +208,7 @@
         "key": "Ctrl+Enter",
         "mac": "Cmd+Enter",
         "command": "dbtPowerUser.executeSQL",
-        "when": "editorFocus && resourceLangId == 'jinja-sql'"
+        "when": "editorFocus && resourceLangId =~ /^sql$|^jinja-sql$/"
       },
       {
         "key": "Ctrl+'",
@@ -225,22 +225,22 @@
       "editor/title": [
         {
           "command": "dbtPowerUser.executeSQL",
-          "when": "resourceLangId == jinja-sql",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
           "group": "navigation@1"
         },
         {
           "command": "dbtPowerUser.runCurrentModel",
-          "when": "resourceLangId == jinja-sql",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
           "group": "navigation@2"
         },
         {
           "command": "dbtPowerUser.testCurrentModel",
-          "when": "resourceLangId == jinja-sql",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
           "group": "navigation@3"
         },
         {
           "command": "dbtPowerUser.sqlPreview",
-          "when": "resourceLangId == jinja-sql",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
           "group": "navigation@4"
         }
       ],
@@ -248,27 +248,27 @@
         {
           "command": "dbtPowerUser.showCompiledSQL",
           "group": "dbt@4",
-          "when": "resourceLangId == jinja-sql"
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         },
         {
           "command": "dbtPowerUser.showRunSQL",
           "group": "dbt@5",
-          "when": "resourceLangId == jinja-sql"
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         },
         {
           "command": "dbtPowerUser.testCurrentModel",
           "group": "dbt@2",
-          "when": "resourceLangId == jinja-sql"
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         },
         {
           "command": "dbtPowerUser.runCurrentModel",
           "group": "dbt@1",
-          "when": "resourceLangId == jinja-sql"
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         },
         {
           "command": "dbtPowerUser.compileCurrentModel",
           "group": "dbt@3",
-          "when": "resourceLangId == jinja-sql"
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         }
       ],
       "view/title": [
