--- a/package.json
+++ b/package.json
@@ -349,7 +349,6 @@
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.9.3",
-    "vsce": "^2.15.0",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1"
   },
@@ -358,6 +357,7 @@
     "ms-python.python"
   ],
   "dependencies": {
+    "@vscode/vsce": "^2.15.0",
     "@vscode/webview-ui-toolkit": "^1.2.0",
     "dayjs": "^1.8.34",
     "inversify": "^6.0.1",
